[project]
name = "audio-edge-cli"
version = "0.1.0"
description = "vaked-audio CLI — stream, play, import from edge"
requires-python = ">=3.12"
dependencies = ["requests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "C4"]
